@@ -12,6 +12,7 @@
 * Spreedly: Update urls and terminology [duff]
 * Make card brand error more user friendly [oggy]
 * DataCash: Update test Mastercard number [jamesshipton]
+* DataCash: Update test response fixtures [jamesshipton]
 
 == Version 1.31.1 (February 25, 2013)
 
